# BraneEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  PREREQUISITES.md  README.md  conanfile.txt  setup-vs.bat
BraneEngine/: CMakeLists.txt  CMakeSettings.json
BraneEngine/src/: BraneEngine.cpp  BraneEngine.h
BraneEngine/src/ECS/: VirtualStruct.cpp  VirtualStruct.h  VirtualType.cpp  VirtualType.h  ecs.h
BraneEngine/src/Tests/: test.h  tests.h
include/: CMakeLists.txt
include/asio/: asio.hpp
include/asio/detail/: config.hpp
include/glm/: manual.md
include/httpLib/: httpLib.h
include/stb/: stb_image.h
lib/: CMakeLists.txt
lib/unix/glslang/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/glfw/: CMakeLists.txt
libraries/glfw/docs/: CMakeLists.txt
libraries/glfw/src/: CMakeLists.txt
libraries/imgui/: CMakeLists.txt
libraries/include/: CMakeLists.txt
libraries/internal/: CMakeLists.txt
libraries/lib/unix/: CMakeLists.txt
libraries/lib/win64/: CMakeLists.txt
libraries/robin_hood/: CMakeLists.txt
libraries/sqlite3/: CMakeLists.txt
libraries/stb/: CMakeLists.txt
libraries/tfd/: CMakeLists.txt
libraries/tinyFileDialog/: CMakeLists.txt
src/: BraneEngine.cpp  BraneEngine.h  CMakeLists.txt  SpacesToTabs.py  braggingStats.py  clock.h  listFiles.bat  stackAllocate.h  time.cpp  time.h
src/ECS/: Archetype.cpp  Archetype.h  Component.cpp  Component.h  Entity.h  VirtualSystem.h  ecs.h
src/ECS/NativeTypes/: transform.h
src/ECS/core/: Archetype.cpp  Archetype.h  Component.cpp  Component.h  Entity.cpp  Entity.h  VirtualSystem.cpp  VirtualSystem.h  VirtualSystemManager.cpp  VirtualSystemManager.h  VirtualType.h
src/Graphics/: graphics.cpp  graphics.h  graphicsBuffer.h  graphicsDevice.cpp  graphicsDevice.h  graphicsPipeline.h  material.cpp  material.h  mesh.h  renderer.cpp  renderer.h  shaders.cpp  shaders.h  swapChain.cpp  swapChain.h  texture.h  validationLayers.h  window.cpp  window.h
src/Tests/: testing.h
src/Tests/ECS/: ECSTests.h  JITTests.h
src/assetServer/: CMakeLists.txt  assetServer.cpp  assetServer.h  config.json  main.cpp  setupDatabase.sql
src/assetServer/assetNetworking/: assetServer.cpp  assetServer.h  networkAuthenticator.cpp  networkAuthenticator.h
src/assetServer/assetProcessing/: AssetBuilder.cpp  AssetBuilder.h  assetBuilder.h  asssetBuilder.cpp  asssetBuilder.h
src/assetServer/assets/: 0000000000000EC6.asset  0000000000000EC7.asset  0000000000000EC8.asset  0000000000000EC9.asset  0000000000000ECA.asset  0000000000000ECB.asset  0000000000000ECC.asset  0000000000000ECD.asset  0000000000000ECE.asset  0000000000000ECF.asset  0000000000000ED0.asset  0000000000000ED1.asset  0000000000000ED2.asset  0000000000000ED3.asset  0000000000000ED4.asset  0000000000000ED5.asset  0000000000000ED6.asset  0000000000000ED7.asset  0000000000000ED8.asset  0000000000000ED9.asset  0000000000000EDA.asset  0000000000000EDB.asset  0000000000000EDC.asset  0000000000000EDD.asset  0000000000000EDE.asset  0000000000000EDF.asset  0000000000000EE0.asset  0000000000000EE1.asset  0000000000000EE2.asset  0000000000000EE3.asset  0000000000000EE4.asset  0000000000000EE5.asset  0000000000000EE6.asset  0000000000000EE7.asset  0000000000000EE8.asset  0000000000000EE9.asset  0000000000000EEA.asset  0000000000000EEB.asset  0000000000000EEC.asset  0000000000000EED.asset  (+114 more)
src/assetServer/database/: CMakeLists.txt  Database.cpp  Database.h  PreppedSQLCall.h  addNativeTypes.sql  assetType.cpp  assetType.h  data.db  data.db-journal  database.cpp  database.h  databaseAsset.cpp  databaseAsset.h
src/assetServer/gltf/: CMakeLists.txt  gltfLoader.cpp  gltfLoader.h  main.cpp
src/assetServer/httpServer/: CMakeLists.txt  assetHttpServer.cpp  assetHttpServer.h
src/assetServer/keys/: branevr.key  dh2048.pem  rootca.key  rootca.srl  user.crt  user.csr  user.key
src/assetServer/pages/: template.html
src/assetUploader/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  client.cpp  client.h  config.json  main.cpp
src/client/graphics/: CMakeLists.txt  GraphicAssetPreprocessors.cpp  graphicAssetPreprocessors.h  graphics.cpp  graphics.h  graphicsBuffer.h  graphicsDevice.cpp  graphicsDevice.h  graphicsPipeline.cpp  material.cpp  material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  swapChain.cpp  swapChain.h  texture.cpp  window.h
src/client/keys/: rootca.crt
src/client/tests/: tests.h
src/common/: CMakeLists.txt  byte.h
src/common/assets/: CMakeLists.txt  assembly.cpp  assembly.h  asset.cpp  asset.h  assetAddress.cpp  assetAddress.h  assetID.cpp  assetID.h  assetManager.cpp  assetManager.h  assetNetworking.cpp  assetType.cpp  assetType.h  assetTypes.cpp  assetTypes.h  chunk.cpp  chunk.h  nativeAsset.cpp  nativeAsset.h
src/common/chunk/: CMakeLists.txt  chunkLoader.cpp  chunkLoader.h  chunkManager.cpp  chunkManager.h
src/common/config/: CMakeLists.txt  config.cpp  config.h
src/common/database/: Database.cpp  Database.h
src/common/ecs/: CMakeLists.txt  StructMembers.py  archetype.cpp  archetype.h  archetypeManager.cpp  archetypeManager.h  chunk.cpp  chunk.h  component.cpp  component.h  componentManager.cpp  componentManager.h  componentSet.cpp  componentSet.h  ecs.h  entity.cpp  entity.h  entityID.cpp  entityID.h  entitySet.cpp  entitySet.h  nativeComponent.h  structMembers.h  system.h  systemManager.cpp  systemManager.h  virtualType.cpp  virtualType.h
src/common/fileManager/: CMakeLists.txt  fileManager.cpp  fileManager.h  fileWatcher.cpp  fileWatcher.h
src/dummy/: CMakeLists.txt  dummy.cpp  dummy.h
src/editor/: BraneProject.cpp  BraneProject.h  CMakeLists.txt  assetEditorContext.cpp  assetEditorContext.h  braneProject.cpp  braneProject.h  config.json  editor.cpp  editor.h  editorEvents.cpp  editorEvents.h  main.cpp  serverFilesystem.cpp  serverFilesystem.h
src/hw/: CMakeLists.txt  test.cpp  test.h
src/input/: CMakeLists.txt  Input.cpp  Input.h
src/runtimeServer/: CMakeLists.txt  main.cpp  runtimeServer.cpp  runtimeServer.h
src/tests/: CMakeLists.txt  main.cpp  testing.h
(+446 files in other folders)
