# src/common
set(CMAKE_FOLDER ${CMAKE_FOLDER}/Common)
add_subdirectory(graphics)
add_subdirectory(assets)
add_subdirectory(runtime)
add_subdirectory(config)
add_subdirectory(networking)
add_subdirectory(utility)
add_subdirectory(ecs)
add_subdirectory(fileManager)
add_subdirectory(input)
add_subdirectory(ui)
add_subdirectory(scripting)
add_subdirectory(chunk)